# airstrike-game-gpl-python

./: README.md  play_airstrike.py  pyproject.toml  requirements.txt
airstrike_py/: __init__.py  __main__.py  assets.py  config.py  entities.py  game.py  text.py
src/: Makefile
